--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,6 @@ edition = "2021"
 anyhow = "1.0.75"
 aws-config = { version = "1.0.3", features = ["behavior-version-latest"] }
 aws-sdk-s3 = "1.5.0"
+byte-unit = { version = "5.0.3", features = ["u128"] }
+clap = { version = "4.4.11", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
