--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,5 @@ aws-config = { version = "1.0.3", features = ["behavior-version-latest"] }
 aws-sdk-s3 = "1.5.0"
 byte-unit = { version = "5.0.3", features = ["u128"] }
 clap = { version = "4.4.11", features = ["derive"] }
+futures = "0.3.29"
 tokio = { version = "1", features = ["full"] }
